--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img class="man-img" src="images/man-1.png" alt="man.img">
       <h2>Hello.</h2>
-      <p class="about-me">am a professional web developer who can fix issues and offer solutions for any future troubles that may accure because am looking for longevity and beauty.</p>
+      <p class="about-me">am a professional web developer who can fix issues and offer solutions for any future troubles that may occure because am looking for longevity and beauty.</p>
     </div>
     <hr>
     <div class="skills">
